[package]
name = "shodan-client-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clap = "2.34.0"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.137", features = ["derive","std"] }
serde_json = "1.0.82"
multipart = { version = "0.18.0", features = ["hyper"] }
